[package]
name = "starlark-pyo3"
version = "0.1.0"
authors = ["Andreas Kloeckner <inform@tiker.net>"]
license = "MIT"

description = "Python bindings for starlark-rust"
homepage = "https://github.com/inducer/starlark-pyo3"
repository = "https://github.com/inducer/starlark-pyo3"
readme = "README.rst"
edition = "2021"

exclude = [
        "dist/*",
        ]

[lib]
crate-type = ["cdylib"]
name = "starlark"

[dependencies]
# All these live in the starlark repo.
# NOTE: When updating starlark, check for further reasons why Module may not be
# Send.
starlark = { git = "https://github.com/facebook/starlark-rust", rev = "f0a4a7e03eef100b0c539806347aa3a481abc7ac" }
starlark_derive = { git = "https://github.com/facebook/starlark-rust", rev = "f0a4a7e03eef100b0c539806347aa3a481abc7ac" }
gazebo = { git = "https://github.com/facebook/starlark-rust", rev = "f0a4a7e03eef100b0c539806347aa3a481abc7ac" }
allocative = { git = "https://github.com/facebook/starlark-rust", rev = "f0a4a7e03eef100b0c539806347aa3a481abc7ac" }
dupe = { git = "https://github.com/facebook/starlark-rust", rev = "f0a4a7e03eef100b0c539806347aa3a481abc7ac" }

anyhow = "^1.0.65"
pyo3 = { version = "0.26", features = ["extension-module"] }

# needed to resolve contradictory constraints in dependencies
syn = "^1.0.96"

serde_json = "1.0"
num-bigint = "0.4.3"
thiserror = "^1.0.35"

proc-macro2 = "^1.0.63"


[lints.clippy]
all = "warn"

