[package]
name = "starlark-pyo3"
version = "0.1.0"
authors = ["Andreas Kloeckner <inform@tiker.net>"]
license = "MIT"

description = "Python bindings for starlark-rust"
homepage = "https://github.com/inducer/starlark-pyo3"
repository = "https://github.com/inducer/starlark-pyo3"
readme = "README.rst"
edition = "2021"

exclude = [
        "dist/*",
        ]

[lib]
crate-type = ["cdylib"]
name = "starlark"

[dependencies]
# All these live in the starlark repo.
# NOTE: When updating starlark, check for further reasons why Module may not be
# Send.
starlark = { git = "https://github.com/facebook/starlark-rust", rev = "db3b090a19f6134f2a79a727f70d80f68f8f7dc6" }
starlark_derive = { git = "https://github.com/facebook/starlark-rust", rev = "db3b090a19f6134f2a79a727f70d80f68f8f7dc6" }
gazebo = { git = "https://github.com/facebook/starlark-rust", rev = "db3b090a19f6134f2a79a727f70d80f68f8f7dc6" }
allocative = { git = "https://github.com/facebook/starlark-rust", rev = "db3b090a19f6134f2a79a727f70d80f68f8f7dc6" }
dupe = { git = "https://github.com/facebook/starlark-rust", rev = "db3b090a19f6134f2a79a727f70d80f68f8f7dc6" }

anyhow = "^1.0.65"
pyo3 = { version = "0.26", features = ["extension-module"] }

# needed to resolve contradictory constraints in dependencies
syn = "^1.0.96"

serde_json = "1.0"
num-bigint = "0.4.3"
thiserror = "^1.0.35"

proc-macro2 = "^1.0.63"


[lints.clippy]
all = "warn"

