[build-system]
requires = ["maturin>=1.4.0,<2"]
build-backend = "maturin"

[project]
name = "starlark-pyo3"
version = "2024.1.3"
description = "Wraps starlark-rust into Python"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    { name = "Andreas Kloeckner", email = "inform@tiker.net" }
    ]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
homepage = "https://github.com/inducer/starlark-pyo3"

