[build-system]
requires = ["maturin>=1.4.0,<2"]
build-backend = "maturin"

[project]
name = "starlark-pyo3"
version = "2025.1"
description = "Wraps starlark-rust into Python"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    { name = "Andreas Kloeckner", email = "inform@tiker.net" }
    ]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
homepage = "https://github.com/inducer/starlark-pyo3"

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "Q",   # flake8-quotes
    "UP",  # pyupgrade
    "RUF", # ruff
    "W",   # pycodestyle
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
known-local-folder = [
    "starlark",
]
lines-after-imports = 2
